--- a/examplemovingdetector/src/main/res/layout/terminate_dialog_permission_denied.xml
+++ b/examplemovingdetector/src/main/res/layout/terminate_dialog_permission_denied.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -11,7 +11,7 @@
         android:text="@string/permission_has_not_been_granted"
         android:textSize="@dimen/text_big" />
 
-    <android.support.v7.widget.AppCompatButton
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
